--- a/artists/spivak.html
+++ b/artists/spivak.html
@@ -45,6 +45,7 @@
 </div>
 			<div style="max-height: 600px" class="col-6">
 				<img src="http://homewards.github.io/artists/img/spivak.jpg" class="sideimg">
+								<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
