--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<a href="artists/elektroniki.html" target="_self">elektroniki</a><br>
 				<a href="artists/mm.html" target="_self">Emiddio Vasquez</a><br>
 				<a href="artists/georges.html" target="_self">Georges D'André</a><br>
-				<a href="artists/hadesmilitia.html" target="_self">Hades Militia</a><br>
+				<a href="artists/hades.html" target="_self">Hades Militia</a><br>
 				<a href="artists/yeliades.html" target="_self">isel</a><br>
 				<a href="artists/shammas.html" target="_self">Michalis Sham</a><br>
 				<a href="artists/oswaldo.html" target="_self">Oswaldo III</a><br>
