--- a/events/gathering.html
+++ b/events/gathering.html
@@ -62,7 +62,7 @@
 <p> Photos: Eleni Tzialli, Andreas Constantinides</p>
 </p>
 			<h1><a href="https://www.youtube.com/playlist?list=PLFwMUknVCG7Fq1JcH__QIbImjwnU8X9tP" target="_blank">Video Archive</a></h1>
-			<h1><a href="events/img/gathering/Brochure.pdf" target="_blank">Download Brochure</a></h1>
+			<h1><a href="img/gathering/Brochure.pdf" target="_blank">Download Brochure</a></h1>
 
 			<h1><a href="https://www.mixcloud.com/grahamdunning/fractal-meat-110-4716-honest-electronics-the-gathering-preview-fractal-meat-live-preview/">NTS Preview</a></h1>
 
