--- a/events/launch.html
+++ b/events/launch.html
@@ -7,7 +7,10 @@
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 	<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 <style>
-
+* {
+	background-color: white;
+	color: black;
+</style>
 </style>
 </head>
 <body>
@@ -44,13 +47,17 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="http://homewards.github.io/events/img/launch/1.jpg" class="slide">
-<img src="http://homewards.github.io/events/img/launch/poster.jpg" width="100%">
-			<img src="http://homewards.github.io/events/img/launch/2.png" class="slide">
-
+<a href="https://soundcloud.com/honest-electronics/sets/dishonest-01-vinyl-billydraw-silver"target="_blank"><img src="img/launch/dis01.jpg" class="midimg"></a>
+			<br>
+			<a href="https://soundcloud.com/honest-electronics/sets/motorik"target="_blank"><img src="img/launch/he01.jpg" class="midimg"></a>
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
+			<img src="http://homewards.github.io/events/img/launch/1.jpg" class="sideimg">
+			<br><img src="http://homewards.github.io/events/img/launch/2.png" class="sideimg">
+
+<br><img src="http://homewards.github.io/events/img/launch/poster.jpg" class="sideimg">
+			
 
 
 						
@@ -58,6 +65,8 @@
 
 		</div>
 	</div>
+
+
 
 </body>
 </html>
