--- a/artists/pan.html
+++ b/artists/pan.html
@@ -43,6 +43,7 @@
 			
 			<div style="max-height: 600px" class="col-6">
 				<img src="img/pan.jpg" class="sideimg">
+								<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			
 			</div>
 		</div>
@@ -68,6 +69,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
+</style>
 
 
 
