--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
 Honest Electronics, is a concept created by Nico Stephou and Aristos Ioannou. Adapting what they've already learnt in their yearly involvement in the local scene, they are joining forces to create a scenario of chained situations in which a community of collaborators can flourish.</p>
 						
         </div>
-
+<div style="max-height: 600px;" class="col-4">
+	<img src="images/launch.jpg" width="100%">
+</div>
 		</div>
 	</div>
 
