--- a/artists/elektroniki.html
+++ b/artists/elektroniki.html
@@ -28,7 +28,7 @@
 			<h1>Producer / Performer</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>Tfalling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
+            <p>falling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
 
 			<p><a href="https://soundcloud.com/elektroniki" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/elektroniki/" target="_blank">Instagram</a></p>
 <br>
@@ -64,7 +64,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
-
+</style>
 
 
 </body>
