--- a/artists/pan.html
+++ b/artists/pan.html
@@ -25,7 +25,7 @@
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>pan</h1>
-			<h1>Producer / Photographer</h1>
+			<h1>Producer / Visual Artist</h1>
 			<h1>Cyprus</h1>
 			<br>
             <p>pan is  the sobriquet of multi-culture/platform artist Panagiotis. He works with visual and or acoustical elements to create distinct objects and texts that frequently cross the lines between parody / reality / auteurship / art / pop. As a musician he performs using a selection of electronic modular sythesizers, drum machines and haptic instruments, guitars, drums and microphones which metamorphose constantly as his sets are often based on autoschediasm. </p>
