--- a/artists/georges.html
+++ b/artists/georges.html
@@ -24,7 +24,7 @@
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>Cusack</h1>
+			<h1>Georges D'André</h1>
 			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
