--- a/artists/mm.html
+++ b/artists/mm.html
@@ -28,7 +28,7 @@
 			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>Born in Dominican Republic and raised Cyprus, Emiddio Vasquez works with sound on both the stage and in gallery spaces using extended techniques (guitar), modular synthesizer, turntables, field recordings, reel-to-reel and digital processes.</p>
+            <p>Born in Dominican Republic and raised in Cyprus, Emiddio Vasquez works with sound on both the stage and in gallery spaces using extended techniques (guitar), modular synthesizer, turntables, field recordings, reel-to-reel and digital processes.</p>
 
 			<p><a href="https://soundcloud.com/emiddiovasquez" target="_blank">Soundcloud</a></p>
 			<p>Other Aliases;&nbsp&nbsp<a href="oswaldo.html">Oswaldo III</a></p>
