--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link href="styles.css" rel="stylesheet" media="all and (max-width: 1024px)">
 	<link rel="icon" href="images/he.png">
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
@@ -64,7 +65,7 @@
 
 		</div>
 
-		<div style="height:100%" class="col-5 end" position: relative; left: 0; top: 0;>
+		<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
 				<img src="images/dis666-back.jpg"  class="back">
 				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="images/fic-sb9.png" class="sb9"></a>
 				<a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character" target="_blank"><img src="images/fic-nico.png" class="nico"></a>
@@ -75,7 +76,7 @@
 				<a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank"><img src="images/fic-bu.png" class="bu"></a>
 		</div>
 
-        <div "height:100%" class="col-3" id="rightbar">
+        <div "height:100%" class="loc-3" id="rightbar">
 
 				<p>Dishonest Presents<br>Six Elements of Fiction</p>
 									<br>
