--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<img src="images/he.png" class="logo" id="animation-target">
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
-			<p>An action to highlight the importance of local<br> networking whilst simultaneously attempting <br>to connect with an international network.</p>
+			<p>An action to highlight the importance of local networking whilst simultaneously attempting to connect with an international network.</p>
 			<h1><a href="contact.html" target="_self">Contact</a></h1>
 			<h1><a href="about.html" target="_self">About</a></h1>
 			<h1><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h1>
