--- a/artists/aportrait.html
+++ b/artists/aportrait.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -30,11 +30,9 @@
 			<br>
             <p>Aportrait is the abstract and experimental new project by Istanbul based artist and Memoire Affective label boss Arman Akıncı, who has been DJ’ing over a decade and has an ongoing radio show ‘’Armanqrtachure’’ at Radio Dinamo.</p>
 			<p><a href="https://soundcloud.com/aportrait" target="_blank">Soundcloud</a></p>
-<br>
-<br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 800px" class="col-3" >
 				<br>
 <br>
 <br>
@@ -74,7 +72,7 @@ a:active {
     color: white;
 }
 
-
+</style>
 
 </body>
 </html>
