--- a/artists/rawsilver.html
+++ b/artists/rawsilver.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style="max-height: 6000px" class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -34,7 +34,7 @@
 
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 800px" class="col-3" >
 				<h1>Releases</h1>
 				<br>
 			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/275020515&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
@@ -74,7 +74,7 @@ a:active {
     color: white;
 }
 
-
+</style>
 
 </body>
 </html>
