--- a/artists/spivak.html
+++ b/artists/spivak.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -34,16 +34,15 @@
 <br>
 			</div>
 
-			<div style="max-height: 600px" class="col-3" id="images">
+			<div style="height: 400px" class="col-3" id="images">
 				<br>
 <br>
 <br>
-<br>
-<br>
+
 			<iframe width="80%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262277322&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			<br>
 </div>
-			<div style="max-height: 600px" class="col-6">
+			<div style="max-height: 6000px" class="col-6">
 				<img src="http://homewards.github.io/artists/img/spivak.jpg" class="sideimg">
 								<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
