--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<br>
             <h1>Events</h1>
 			<p><a href="events/gathering.html">The Gathering, July 2016</a>
-			<br><a href="events/launch.html">Record Label Laucnh, 2ΠΠ, August 2016</a>
+			<br><a href="events/launch.html">Record Label Launch, 2ΠΠ, August 2016</a>
 			<br><a href="events/discosucks.html">Disco Sucks, NYE 2017</a></p>
 
 			<h1>Releases</h1>
