--- a/artists/aristodemos.html
+++ b/artists/aristodemos.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style="max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -68,7 +68,7 @@ a:active {
     color: white;
 }
 
-
+</style>
 
 </body>
 </html>
