--- a/artists/billyd.html
+++ b/artists/billyd.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -40,7 +40,7 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="max-height: 6000px"class="col-3" >
 				<h1>Releases</h1>
 				<br>
 			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308574185&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
@@ -79,7 +79,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
-
+</style>
 
 
 </body>
