--- a/artists/cusack.html
+++ b/artists/cusack.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style="max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -31,11 +31,9 @@
             <p>Tony Kattashis bought his first set of turntables in the mid 90's, while living in London. Greatly affected by the UK underground and the sounds of Detroit and Chicago, he moved back to Cyprus a decade later with several thousand vinlys, a few drum machines and some old synths. He has since secretly mastered his dance-floor sensibility both in the studio and behind the turntables, gaining reputation as one of the island's finest DJ’s.</p>
 
 			<p><a href="https://soundcloud.com/tk1-1" target="_blank">Soundcloud</a></p>
-<br>
-<br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 100px" class="col-3" >
 				<iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2FPARADIO%2Fcusack%2F&hide_cover=1&mini=1&hide_artwork=1" frameborder="0"></iframe>
 			</div>
 			
