--- a/artists/elektroniki.html
+++ b/artists/elektroniki.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -35,8 +35,7 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
-			</div>
+
 			
 			<div style="max-height: 600px" class="col-6">
 				<img src="img/elektroniki.jpg" class="sideimg">
