--- a/artists/georges.html
+++ b/artists/georges.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style="max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -35,10 +35,10 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 60px"class="col-3" >
 			</div>
 			
-			<div style="max-height: 600px" class="col-6">
+			<div style= "max-height: 6000px"class="col-6">
 				<img src="img/georges.jpg" class="sideimg">
 				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
@@ -65,7 +65,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
-
+</style>
 
 
 </body>
