--- a/artists/mm.html
+++ b/artists/mm.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -36,10 +36,10 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style= "eight: 60px"class="col-3" >
 			</div>
 			
-			<div style="max-height: 600px" class="col-6">
+			<div style= "max-height: 6000px"class="col-6">
 				<img src="img/emiddio.jpg" class="sideimg">
 			
 			</div>
@@ -67,7 +67,7 @@ a:active {
     color: white;
 }
 
-
+</style>
 
 </body>
 </html>
