--- a/artists/oswaldo.html
+++ b/artists/oswaldo.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style="height: 600px" class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -36,7 +36,7 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 20px" class="col-3" >
 				
 			</div>
 			
@@ -66,7 +66,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
-
+</style>
 
 
 </body>
