--- a/artists/shammas.html
+++ b/artists/shammas.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px"class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -36,11 +36,11 @@
 <br>
 			</div>
 
-			<div style="height: 600px" class="col-3" >
+			<div style="height: 60px"class="col-3" >
 				
 			</div>
 			
-			<div style="max-height: 600px" class="col-6">
+			<div style="max-height: 6000px"class="col-6">
 
 								<iframe src="https://player.vimeo.com/video/142541512?autoplay=1&color=000000&title=0&byline=0&portrait=0" width="600" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								<br>
@@ -71,7 +71,7 @@ a:active {
     color: white;
 }
 
-
+</style>
 
 </body>
 </html>
