--- a/artists/yeliades.html
+++ b/artists/yeliades.html
@@ -20,7 +20,7 @@
 
 		<div class="row">
 
-			<div style="max-height: 600px;" class="col-3">
+			<div style= "max-height: 6000px" class="col-3">
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
@@ -33,11 +33,9 @@
 			<p><a href="https://soundcloud.com/yiannisel" target="_blank">Soundcloud</a></p>
 
 			</div>
-
-			<div style="height: 600px" class="col-3" >
-			</div>
-
-			<div style="max-height: 600px" class="col-6">
+<div style= "height: 60px"class="col-3">
+</div>
+			<div style="max-height: 6000px" class="col-6">
 				<img src="img/yiannisel.jpg" class="sideimg">
 			</div>
 		</div>
@@ -63,7 +61,7 @@ a:active {
     text-decoration: underline;
     color: white;
 }
-
+</style>
 
 
 </body>
