--- a/artists/hades.html
+++ b/artists/hades.html
@@ -28,7 +28,7 @@
 			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>miltiades m has 2 aliases Milton says a dj and excessive digger known for his controversial performances where he's not hesitating to experiment and surprise the crowd  and the recent re invention of hisself Hades militia an upcoming expiramental analog dub techno  producer trying to combine the elements of stomping techno dystopian landscapes and poetry together for a better world to come.</p>
+            <p>"Hades militia" is an upcoming experimental analog dub techno producer who is trying to combine the elements of stomping techno dystopian landscapes and poetry for a better world to come.</p>
 
 			<p><a href="https://soundcloud.com/miltiades-1" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/hadesmilitia/" target="_blank">Facebook</a></p>
 <br>
