--- a/artists/rawsilver.html
+++ b/artists/rawsilver.html
@@ -44,7 +44,7 @@
 			<br>
 			<br>
 			
-			<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="img/dis01.jpg" class="midimg"></a>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01"target="_blank"><img src="img/dis01.jpg" class="midimg"></a>
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
