--- a/artists/sb9.html
+++ b/artists/sb9.html
@@ -28,7 +28,7 @@
 			<h1>DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
-			<p>RA daughter of an audiophile, born in Nicosia, Cyprus in 1990. Veronika proves on every occasion that growing up on the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and occasional unexpected floating percussions. Sometimes as Mohama Tajalof - mixing a variety of complex sounds - under the roof of experimental. Always trying to serve deep.</p>
+			<p>A daughter of an audiophile, born in Nicosia, Cyprus in 1990. Veronika proves on every occasion that growing up on the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and occasional unexpected floating percussions. Sometimes as Mohama Tajalof - mixing a variety of complex sounds - under the roof of experimental. Always trying to serve deep.</p>
 			<p><a href="https://soundcloud.com/sbnine" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/moharmy/" target="_blank">Instagram</a></p>
 
 			</div>
