--- a/artists/sb9.html
+++ b/artists/sb9.html
@@ -40,8 +40,8 @@
 			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259585238&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
 			</div>
 
-			<div style= "max-height: 6000px"class="col-6">
-				<img src="img/sb9.jpg" class="sideimg">
+			<div style= "height: 600px"class="col-6">
+				<img src="img/sb9.png" class="sideimg">
 			</div>
 		</div>
 	</div>
