homepage alignments change

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <br><a href="https://honestelectronics.bandcamp.com/"target="_blank">Bandcamp</a>
 <br><a href="https://www.instagram.com/honestelectronics/"target="_blank">Instagram</a>
 <br>
-<br>nico.stephou@gmail.com
+<br>nico@honestelectronics.info
 </p>
 						
         </div>
