--- a/index.html
+++ b/index.html
@@ -15,29 +15,17 @@
 
 		<div class="row">
 
-			<div style="height:100%"  class="col-3" overflow="scroll">
+			<div style="height:100%"  class="col-2" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
-			<p>An action to highlight the importance of local networking whilst simultaneously attempting to connect with an international network.</p>
-			<h4><a href="contact.html" target="_self">Contact</a></h4>
 			<h4><a href="about.html" target="_self">About</a></h4>
+			<h4><a href="contact.html" target="_self">Contact</a></h4>
 			<h4><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h4>
-			<br>
-            <h1>Events</h1>
-			<p><a href="events/gathering.html">The Gathering, July 2016</a>
-			<br><a href="events/launch.html">Record Label Launch, 2ΠΠ, August 2016</a>
-			<br><a href="events/discosucks.html">Disco Sucks, NYE 2017</a></p>
+			<p></p>
+            
 
-			<h1>Releases</h1>
-			<p><a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><p>
-
-			
-
-
-
-			<h1>Artists</h1>
-			<p>
+			<p><u>Artists</u><br>
 				<a href="artists/aportrait.html" target="_self">aportrait</a><br>
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
@@ -54,16 +42,40 @@
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
             </p>
-			
+			<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px;}
+</style>
+<div id="mc_embed_signup" class="newsletter">
+<form action="//honestelectronics.us15.list-manage.com/subscribe/post?u=4fa2468800e61b07153c13f00&amp;id=dee3bbfe64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4fa2468800e61b07153c13f00_dee3bbfe64" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 
 
 		</div>
 
 
-		<div "height:100%" class="col-1" id="images">
+		<div "height:100%" class="col-2" id="images">
+<p><u>Events</u><br>
+			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
+			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
+			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a></p>
 
+			<p><u>Releases</u><br>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><p>
 		</div>
-
+<div style="max-height: 600px" class="col-1">
+	
+</div>
 		<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
 				<img src="images/dis666-back.jpg"  class="back">
 				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="images/fic-sb9.png" class="sb9"></a>
@@ -75,10 +87,10 @@
 				<a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank"><img src="images/fic-bu.png" class="bu"></a>
 		</div>
 
-        <div "height:100%" class="loc-3" id="rightbar">
+        <div "height:100%" class="col-2" id="rightbar">
 
-				<p>Dishonest Presents<br>Six Elements of Fiction</p>
-									<br>
+				<h1>Dishonest</h1>
+				<p>Polaric Sublabel<br>Deep, House & Techno </p>
 				<br>
 				<br>
 				<br>
@@ -89,13 +101,7 @@
 				<br>
 				<br>
 				<br>
-				<br>
-                <br>
-				<br>
-				<br>
-								<br>
-				<br>
-				<p> <a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Character</a><br>Style<br>Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">Point-Of-View</a></p>
+				<p><b>Six Elements of Fiction;</b><br><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
         </div>
 
 	</div>
