--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px;}
+	#mc_embed_signup{background:#fff; clear:left; font:11px Kanit,Arial,sans-serif;  width:200px;}
 </style>
 <div id="mc_embed_signup" class="newsletter">
 <form action="//honestelectronics.us15.list-manage.com/subscribe/post?u=4fa2468800e61b07153c13f00&amp;id=dee3bbfe64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
