--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a></p>
 
 			<p><u>Releases</u><br>
-			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><p>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait</a><p>
 		</div>
 <div style="max-height: 600px" class="col-1">
 	
@@ -87,8 +87,8 @@
 				<a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character" target="_blank"><img src="images/fic-nico.png" class="nico"></a>
 				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="images/fic-bd.png" class="bd" ></a>
 				
-				<img src="images/fic-cu.png" class="cu" id="undone">
-				<img src="images/fic-ar.png" class="ar" id="undone">
+				<a href="https://soundcloud.com/honest-electronics/setting" target="_blank"><img src="images/fic-cu.png" class="cu"></a>
+				<a href="https://soundcloud.com/honest-electronics/style" target="_blank"><img src="images/fic-ar.png" class="ar"></a>
 				<a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank"><img src="images/fic-bu.png" class="bu"></a>
 		</div>
 
