summer updates beginning of session

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="utf-8">
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="icon" href="images/he.png">
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
-
+    <meta property="og:title" content="Nico Stephou - Graphic Designer, Visual Artist" />
+	<meta property="og:type" content="info" />
+	<meta property="og:url" content="wwww.nicostephou.com" />
+	<meta property="og:image" content="https://s8.postimg.org/nludrhmph/og-image.jpg"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="images/he.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color:#00c3ce;">
 
 	<div class="grid">
-
 		<div class="row">
-
-			<div style="height:100%"  class="col-2" overflow="scroll">
+			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
@@ -25,7 +27,7 @@
 			<p></p>
             
 
-			<p><u>Artists</u><br>
+				<p><u>Artists</u><br>
 				<a href="artists/aportrait.html" target="_self">aportrait</a><br>
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
@@ -41,73 +43,63 @@
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
-            </p>
-            				<br>
+            	</p>
 				<br>
-				<br>
-				<br>
-				<br>
-			<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:11px Kanit,Arial,sans-serif;  width:100px;}
-</style>
-<div id="mc_embed_signup" class="newsletter">
-<form action="//honestelectronics.us15.list-manage.com/subscribe/post?u=4fa2468800e61b07153c13f00&amp;id=dee3bbfe64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4fa2468800e61b07153c13f00_dee3bbfe64" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
 
-<!--End mc_embed_signup-->
-
-
-		</div>
-
-
-		<div "height:100%" class="col-2" id="images">
-<p><u>Events</u><br>
-			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
-			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
-			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a></p>
-
-			<p><u>Releases</u><br>
-			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait</a><p>
-		</div>
-<div style="max-height: 600px" class="col-1">
-	
-</div>
-		<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
-				<img src="images/dis666-back.jpg"  class="back">
-				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="images/fic-sb9.png" class="sb9"></a>
-				<a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character" target="_blank"><img src="images/fic-nico.png" class="nico"></a>
-				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="images/fic-bd.png" class="bd" ></a>
-				
-				<a href="https://soundcloud.com/honest-electronics/setting" target="_blank"><img src="images/fic-cu.png" class="cu"></a>
-				<a href="https://soundcloud.com/honest-electronics/style" target="_blank"><img src="images/fic-ar.png" class="ar"></a>
-				<a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank"><img src="images/fic-bu.png" class="bu"></a>
-		</div>
-
-        <div "height:100%" class="col-2" id="rightbar">
 
 				<h1>Dishonest</h1>
 				<p>Polaric Sublabel<br>Deep, House & Techno </p>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
+				<p>Mixtapes</p>
 				<p><b>Six Elements of Fiction;</b><br><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
-        </div>
+
+
+				<br>
+				<!-- Begin MailChimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+				<style type="text/css">
+				#mc_embed_signup{background:#fff; clear:left; font:11px Kanit,Arial,sans-serif;  width:100px;}
+				</style>
+					<div id="mc_embed_signup" class="newsletter" style="background-color:#00c3ce;">
+					<form action="//honestelectronics.us15.list-manage.com/subscribe/post?u=4fa2468800e61b07153c13f00&amp;id=dee3bbfe64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    					<div id="mc_embed_signup_scroll">
+						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4fa2468800e61b07153c13f00_dee3bbfe64" tabindex="-1" value=""></div>
+    						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+   				 		</div>
+					</form>
+					</div>
+					<!--End mc_embed_signup-->
+			</div>
+
+
+			<div "height:100%" class="col-3">
+			<p><u>Releases</u><br>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD - Motorik LP</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait - Home EP</a><br><a href="https://honestelectronics.bandcamp.com/album/mutual-ground">(HE03) Various Artists - Mutual Ground</a><br><a href="none"></a>(HE04) Panayiotis - Hawaiiprus LP<p>
+
+
+			<p><u>Events</u><br>
+			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
+			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
+			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a>
+			<br><a href="events/gatheringii.html">6/17 The Gathering II, Festival</a>
+			<br><a href="events/riverstage.html">7/17 River Stage 2.5, Outdoor Rave</a>
+			<br><a href="events/oneyear.html">8/17 One Year H.E, 2ΠΠ</a>
+
+
+			</div>
+
+			<div style="max-height: 600px" class="col-1">
+	
+			</div>
+
+			<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
+
+			</div>
+
+        	<div "height:100%" class="col-2" id="rightbar">
+
+   		     </div>
 
 	</div>
 
