--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div class="row">
 			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
+			<hr width="500px" color="black">
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
 			<h4><a href="about.html" target="_self">About</a></h4>
@@ -44,16 +45,13 @@
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
             	</p>
-				<br>
+<hr width="500px" color="black">
+<br>
+				<h1>Dishonest — Polaric Sublabel</h1>
+				<p><u>Mix Projects</u><br>Six Elements of Fiction;<br></p>
+				<p><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
 
-
-				<h1>Dishonest</h1>
-				<p>Polaric Sublabel<br>Deep, House & Techno </p>
-				<p>Mixtapes</p>
-				<p><b>Six Elements of Fiction;</b><br><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
-
-
-				<br>
+<hr width="500px" color="black">
 				<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 				<style type="text/css">
@@ -74,8 +72,16 @@
 
 
 			<div "height:100%" class="col-3">
+				<br>
+				<br>
+				<br>
+				<br>
+<br>
+<br>
+<br>
+
 			<p><u>Releases</u><br>
-			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD - Motorik LP</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait - Home EP</a><br><a href="https://honestelectronics.bandcamp.com/album/mutual-ground">(HE03) Various Artists - Mutual Ground</a><br><a href="none"></a>(HE04) Panayiotis - Hawaiiprus LP<p>
+			<a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD - Motorik LP</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait - Home EP</a><br><a href="https://honestelectronics.bandcamp.com/album/mutual-ground">(HE03) Various Artists - Mutual Ground</a><br><a href="none"></a>(HE04) Panayiotis - Hawaiiprus LP<p>
 
 
 			<p><u>Events</u><br>
@@ -83,9 +89,22 @@
 			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
 			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a>
 			<br><a href="events/gatheringii.html">6/17 The Gathering II, Festival</a>
-			<br><a href="events/riverstage.html">7/17 River Stage 2.5, Outdoor Rave</a>
 			<br><a href="events/oneyear.html">8/17 One Year H.E, 2ΠΠ</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+			<p><u>Releases</u><br>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a>
+
+			<p><u>Events</u><br>
+			<a href="events/riverstage.html">7/17 River Stage 2.5, Outdoor Rave</a>
 
 			</div>
 
