final layout updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
-			<hr width="500px" color="black">
+			<hr width="470px" color="black">
 			<h1>Honest Electronics</h1>
 			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
 			<h4><a href="about.html" target="_self">About</a></h4>
@@ -29,7 +29,7 @@
             
 
 				<p><u>Artists</u><br>
-				<a href="artists/aportrait.html" target="_self">aportrait</a><br>
+				<a href="artists/aportrait.html" target="_self">Aportrait</a><br>
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
 				<a href="artists/cusack.html" target="_self">Cusack</a><br>
@@ -45,13 +45,13 @@
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
             	</p>
-<hr width="500px" color="black">
+<hr width="470px" color="black">
 <br>
 				<h1>Dishonest — Polaric Sublabel</h1>
 				<p><u>Mix Projects</u><br>Six Elements of Fiction;<br></p>
 				<p><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
 
-<hr width="500px" color="black">
+<hr width="470px" color="black">
 				<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 				<style type="text/css">
@@ -101,7 +101,7 @@
 <br>
 
 			<p><u>Releases</u><br>
-			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a>
+			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD+RAW SILVER (12")</a>
 
 			<p><u>Events</u><br>
 			<a href="events/riverstage.html">7/17 River Stage 2.5, Outdoor Rave</a>
