--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</div>
 
 			<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
-
+<img src="images/homepage.gif">
 			</div>
 
         	<div "height:100%" class="col-2" id="rightbar">
