--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 				<p><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
 
 <hr width="470px" color="black">
+<br>
+<br>
 				<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 				<style type="text/css">
@@ -108,11 +110,8 @@
 
 			</div>
 
-			<div style="max-height: 600px" class="col-1">
-	
-			</div>
 
-			<div style="height:100%" class="loc-5 end" position: relative; left: 0; top: 0;>
+			<div style="height:100%" class="loc-5 end" position: relative; right: 0; top: 0;>
 <img src="images/homepage.gif">
 			</div>
 
