--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 			<div style="height:100%" class="loc-5 end" position: relative; right: 0; top: 0;>
-<img src="images/homepage.gif">
+			<img src="images/hompeage.gif" class="homepage">
 			</div>
 
         	<div "height:100%" class="col-2" id="rightbar">
