--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             	</p>
 <hr width="470px" color="black">
 <br>
-				<h1>Dishonest — Polaric Sublabel</h1>
+				<h1>Dishonest — Club-Focused Sound Sublabel</h1>
 				<p><u>Mix Projects</u><br>Six Elements of Fiction;<br></p>
 				<p><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
 
