--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
 			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
 			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a>
-			<br><a href="events/gatheringii.html">6/17 The Gathering II, Festival</a>
-			<br><a href="events/oneyear.html">8/17 One Year H.E, 2ΠΠ</a>
+			<br><a href="https://www.facebook.com/events/1907112182868760/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A951029598326180%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A951029598326180%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D">6/17 The Gathering II, Festival</a>
+			<br><a href="none">8/17 One Year H.E, 2ΠΠ</a>
 <br>
 <br>
 <br>
@@ -106,7 +106,7 @@
 			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD+RAW SILVER (12")</a>
 
 			<p><u>Events</u><br>
-			<a href="events/riverstage.html">7/17 River Stage 2.5, Outdoor Rave</a>
+			<a href="https://www.facebook.com/events/1907112182868760/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A951029598326180%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A951029598326180%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D">7/17 River Stage 2.5, Outdoor Rave</a>
 
 			</div>
 
