--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="images/he.png" type="image/x-icon">
 </head>
 
-<body style="background-color:#00c3ce;">
+<body style="background-color:white;">
 
 	<div class="grid">
 		<div class="row">
@@ -50,6 +50,7 @@
 				<h1>Dishonest — Club-Focused Sound Sublabel</h1>
 				<p><u>Mix Projects</u><br>Six Elements of Fiction;<br></p>
 				<p><a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Nico Stephou — Character</a><br>Aristodemos — Style<br>Cusack — Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">SB-9 — Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">BillyD — Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">bu$$ — Point-Of-View</a></p>
+				<br>
 
 <hr width="470px" color="black">
 <br>
@@ -59,7 +60,7 @@
 				<style type="text/css">
 				#mc_embed_signup{background:#fff; clear:left; font:11px Kanit,Arial,sans-serif;  width:100px;}
 				</style>
-					<div id="mc_embed_signup" class="newsletter" style="background-color:#00c3ce;">
+					<div id="mc_embed_signup" class="newsletter" style="background-color:white;">
 					<form action="//honestelectronics.us15.list-manage.com/subscribe/post?u=4fa2468800e61b07153c13f00&amp;id=dee3bbfe64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     					<div id="mc_embed_signup_scroll">
 						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
@@ -90,8 +91,8 @@
 			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
 			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
 			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a>
-			<br><a href="https://www.facebook.com/events/1907112182868760/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A951029598326180%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A951029598326180%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D">6/17 The Gathering II, Festival</a>
-			<br><a href="none">8/17 One Year H.E, 2ΠΠ</a>
+			<br><a href="https://www.facebook.com/events/1907112182868760/">6/17 The Gathering II, Festival</a>
+			<br><a href="https://www.facebook.com/thkioppalies/">8/17 One Year H.E, 2ΠΠ</a>
 <br>
 <br>
 <br>
@@ -106,13 +107,14 @@
 			<a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD+RAW SILVER (12")</a>
 
 			<p><u>Events</u><br>
-			<a href="https://www.facebook.com/events/1907112182868760/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A951029598326180%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A951029598326180%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D">7/17 River Stage 2.5, Outdoor Rave</a>
+			<a href="https://www.facebook.com/events/224318684745869">7/17 River Stage 2.5, Outdoor Rave</a>
 
 			</div>
 
 
 			<div style="height:100%" class="loc-5 end" position: relative; right: 0; top: 0;>
-			<img src="images/hompeage.gif" class="homepage">
+			<a href="https://www.facebook.com/events/224318684745869/">
+<img border="0" alt="W3Schools" src="images/river.jpg" target="_blank" class="homepage">
 			</div>
 
         	<div "height:100%" class="col-2" id="rightbar">
