--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<a href="events/gathering.html">7/16 The Gathering, Festival</a>
 			<br><a href="events/launch.html">8/16 Record Label Launch, 2ΠΠ</a>
 			<br><a href="events/discosucks.html">NYE/16 Disco Sucks, Coronet</a>
-			<br><a href="https://www.facebook.com/events/1907112182868760/">6/17 The Gathering II, Festival</a>
-			<br><a href="https://www.facebook.com/thkioppalies/">8/17 One Year H.E, 2ΠΠ</a>
+			<br><a href="https://www.facebook.com/events/1907112182868760/" target="_blank">6/17 The Gathering II, Festival</a>
+			<br><a href="http://thkioppalies.org/Sound/One-Year-Honest-Electronics" target="_blank">8/17 One Year H.E, 2ΠΠ</a>
 <br>
 <br>
 <br>
@@ -113,8 +113,8 @@
 
 
 			<div style="height:100%" class="loc-5 end" position: relative; right: 0; top: 0;>
-			<a href="https://www.facebook.com/events/224318684745869/">
-<img border="0" alt="W3Schools" src="images/river.jpg" target="_blank" class="homepage">
+			<a href="https://honestelectronics.bandcamp.com/">
+<img border="0" alt="W3Schools" src="images/thanatos-01.png" target="_blank" class="homepage">
 			</div>
 
         	<div "height:100%" class="col-2" id="rightbar">
