--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <br>
 
 			<p><u>Releases</u><br>
-			<a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD - Motorik LP</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait - Home EP</a><br><a href="https://honestelectronics.bandcamp.com/album/mutual-ground">(HE03) Various Artists - Mutual Ground</a><br><a href="none"></a>(HE04) Panayiotis - Hawaiiprus LP<p>
+			<a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD - Motorik LP</a><br><a href="https://honestelectronics.bandcamp.com/album/home-he02" target="_blank">(HE02) Aportrait - Home EP</a><br><a href="https://honestelectronics.bandcamp.com/album/mutual-ground">(HE03) Various Artists - Mutual Ground</a><br><a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04"></a>(HE04) Panayiotis - Hawaiiprus LP<br><a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04"></a>(HE05) RAW SILVER - Thanatos EP<p>
 
 
 			<p><u>Events</u><br>
