--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="artists/yeliades.html" target="_self">isel</a><br>
 				<a href="artists/shammas.html" target="_self">Michalis Sham</a><br>
 				<a href="artists/oswaldo.html" target="_self">Oswaldo III</a><br>
-				<a href="artists/pan.html" target="_self">pan</a><br>
+				<a href="artists/pan.html" target="_self">Panayotis</a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
